fixed images issue

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1>I'm Pranay</h1>
         <h2>a web <span class="dev">dev</span>eloper</h2>
         <!-- <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img"> -->
-        <div style="width:100%;">
-        <img src="images/main.png"  alt="mountain-img">
+        <div>
+        <img src="images/main.png" class="main-img"  alt="mountain-img">
         </div>
       </div>
     </div>
